Change footer height. Fix flex on Safari.

--- a/source/stylesheets/modules/_m-footer.scss
+++ b/source/stylesheets/modules/_m-footer.scss
@@ -157,7 +157,7 @@
 
     .wrapper {
       @include flex-flow(column, wrap);
-      height: 697px;
+      height: 720px;
     }
   }
 }
